--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </style>
  
 <body class="logo">
-  <marquee> <p style="font-size:10px;">小染yyds</p> 
-            <p>小染最帅</p>
-            <p style="font-size:50px;">小染NB</p>
-            <p>染</p></marquee>
-   
+  <marquee> <p style="font-size:10px;">小鹏大傻子</p> 
+            <p>傻鹏</p>
+            <p style="font-size:50px;">真傻</p>
+            
  </body>
 </html>
